# grasp-scenario-setup

./: CMakeLists.txt  README.md
app/scripts/: r1-grasp-scenario-setup.xml
data/: Ref_320x240_scenario1.ppm  Ref_320x240_scenario2.ppm  Ref_640x480_scenario1.ppm  Ref_640x480_scenario2.ppm
src/: main.cpp
